# saxion-prog2-final-proj

./: .gitignore  CMakeLists.txt  big_game.c  big_game.h  design_example.md  main.c  round.c  round.h  small_game.c  small_game.h  tile.c  ultimate_tictactoe
inc/: big_game.h  functions.h  tile.h
src/: big_game.c  round.c  small_game.c  tile.c
